# acme-rescue-a-uuid

./: .gitignore  CHANGELOG.md  LICENSE  README.md  acme-rescue-a-uuid.cabal
src/Acme/UUID/: V4.hs
test/: Main.hs
