cabal-version:   3.14
name:            acme-rescue-a-uuid
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          khuldraeseth
maintainer:      28711596+khuldraeseth@users.noreply.github.com
homepage:        https://github.com/khuldraeseth/acme-rescue-a-uuid
bug-reports:     https://github.com/khuldraeseth/acme-rescue-a-uuid/issues
category:        Acme
build-type:      Simple
extra-doc-files: CHANGELOG.md
synopsis:        Eliminate needless UUID waste!
description:
  Horrible websites like <https://wasteaguid.info/> are throwing away
  irreplaceable resources at the expense of the world. Help stop this blight on
  our digital environment by rescuing UUIDs instead of creating new ones!

source-repository head
  type:     git
  location: https://github.com/khuldraeseth/acme-rescue-a-uuid

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Acme.UUID.V4
  build-depends:
    , base             ^>=4.20.0.0
    , html-conduit     ^>=1.3.0.0
    , http-client      ^>=0.7.0
    , http-client-tls  ^>=0.3.0.0
    , http-conduit     ^>=2.3.0.0
    , safe             ^>=0.3.0
    , text             ^>=2.1.0
    , uuid             ^>=1.3.0
    , xml-conduit      ^>=1.10.0.0

  hs-source-dirs:   src
  default-language: GHC2024

test-suite acme-rescue-a-uuid-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , acme-rescue-a-uuid
    , base                ^>=4.20.0.0
